--- a/table.html
+++ b/table.html
@@ -23,8 +23,8 @@ layout: default
     build up the complexity from there. But this problem is already formidable!
   </p>
   <p>
-    In this table, the row marked <b>nxn &rarr; n</b> shows the number of ways to partition an n
-    by n grid into n
+    In this table, the row marked <b>nxn &rarr; d</b> shows the number of ways to partition an n
+    by n grid into d
     districts (or connected pieces). The columns describe how much size difference is tolerated
     among
     the districts.
