New background image, change page titles

--- a/who.html
+++ b/who.html
@@ -1,11 +1,12 @@
 ---
 layout: default
-title: Team
+navtitle: Team
+title: Our Team
 nav: true
 order: 2
 ---
 <article>
-  <h1>Team</h1>
+  <h1>Our Team</h1>
   <p>As an organization, MGGG operates on multiple scales. We have a core group in the Boston area,
     a larger group of active contributors working with us on various projects, and several hundred
     people who attended our
@@ -27,9 +28,11 @@ order: 2
     <dt><img src="/static/images/angulu.jpg" alt="A photo of Hakeem Angulu"></dt>
     <dd><strong><a href="https://www.hakeemangulu.com/">Hakeem Angulu</a></strong> is a junior at
       Harvard College concentrating in Computer Science and Statistics, with a Secondary in African
-      American Studies. He is dedicated to building projects that amplify voices, facilitate justice, and push limits.
-      He works with MGGG through the Radcliffe Research Program, focusing on algorithms and computer experiments.
-      </dd>
+      American Studies. He is dedicated to building projects that amplify voices, facilitate
+      justice, and push limits.
+      He works with MGGG through the Radcliffe Research Program, focusing on algorithms and
+      computer experiments.
+    </dd>
 
     <dt><img src="/static/images/buck.png" alt="A photo of Ruth Buck"></dt>
     <dd><strong>Ruth Buck</strong> is a recent graduate of Macalester College, where she studied
