--- a/va2018.html
+++ b/va2018.html
@@ -2,18 +2,16 @@
 layout: default
 title: Virginia House of Delegates
 ---
-<main>
-  <article>
-    <h2 class="headline">Virginia House of Delegates</h2>
+<article>
+  <h1>Virginia House of Delegates</h1>
 
-    <p>
-      We are conducting a Markov chain Monte Carlo analysis of several districting plans for the
-      Virginia House of Delegates.
-    </p>
+  <p>
+    We are conducting a Markov chain Monte Carlo analysis of several districting plans for the
+    Virginia House of Delegates.
+  </p>
 
-    <p>
-      A preliminary report can be found <a href="/pdf/VA-analysis.pdf">here</a>. More data and
-      analysis will be provided as available.
-    </p>
-  </article>
-</main>
+  <p>
+    A preliminary report can be found <a href="/pdf/VA-analysis.pdf">here</a>. More data and
+    analysis will be provided as available.
+  </p>
+</article>
