--- a/test-resources.html
+++ b/test-resources.html
@@ -10,8 +10,16 @@ title:  Our Work
   where: "type", "report" |
   sort: "date" |
   reverse %}
-{% assign software = site.works |
-  where: "type", "software" |
+{% assign code = site.works |
+  where: "type", "code" |
+  sort: "date" |
+  reverse %}
+  {% assign research = site.works |
+  where: "type", "research" |
+  sort: "date" |
+  reverse %}
+  {% assign data = site.works |
+  where: "type", "data" |
   sort: "date" |
   reverse %}
 <div class="gallery-container">
@@ -20,26 +28,35 @@ title:  Our Work
 </div>
 
 <div class="gallery-grid">
+<div>
 <h2 class="gallery__title">Surveys and popular articles</h2>
 <ul class="gallery">
 {% for work in surveys %}
 {% include card.html work=work %}
 {% endfor %}
 </ul>
+</div>
 
-<h2 class="gallery__title">Tools and interactives</h2>
+<div>
+<h2 class="gallery__title">Research</h2>
 <ul class="gallery">
-{% for work in software %}
+{% for work in research %}
 {% include card.html work=work %}
 {% endfor %}
 </ul>
+</div>
 
-<h2 class="gallery__title">Data</h2>
+<div>
+<h2 class="gallery__title">Data, tools, and interactives</h2>
 <ul class="gallery">
 {% for work in data %}
 {% include card.html work=work %}
 {% endfor %}
+{% for work in code %}
+{% include card.html work=work %}
+{% endfor %}
 </ul>
+</div>
 </div>
 
 </div>
