--- a/va2018.html
+++ b/va2018.html
@@ -6,12 +6,11 @@ title: Virginia House of Delegates
   <h1>Virginia House of Delegates</h1>
 
   <p>
-    We are conducting a Markov chain Monte Carlo analysis of several districting plans for the
+    We have conducted a Markov chain Monte Carlo analysis of several districting plans for the
     Virginia House of Delegates.
   </p>
 
   <p>
-    A preliminary report can be found <a href="/pdf/VA-analysis.pdf">here</a>. More data and
-    analysis will be provided as available.
+    Our report can be found <a href="/pdf/VA-analysis.pdf">here</a>. 
   </p>
 </article>
