--- a/va2018.html
+++ b/va2018.html
@@ -11,6 +11,6 @@ title: Virginia House of Delegates
   </p>
 
   <p>
-    Our report can be found <a href="/pdf/VA-report.pdf">here</a>. 
+    Our report can be found <a href="/VA-report.pdf">here</a>. 
   </p>
 </article>
