--- a/who.html
+++ b/who.html
@@ -66,7 +66,7 @@ order: 2
       geometry and algebraic combinatorics at UMass Amherst.</dd>
 
     <dt><img src="/static/images/kestigian.jpg" alt="A photo of Aidan Kestigian"></dt>
-    <dd><strong><a href="https://aidankestigian.wordpress.com/">Aidan Kestigian</a></strong> is
+    <dd><strong><a href="https://www.aidankestigian.com/">Aidan Kestigian</a></strong> is
       the program manager
       for MGGG, managing the group's research, civic, and fundraising initiatives. Prior to
       working for MGGG, Aidan
