Add Zach, TOC for Work

--- a/who.html
+++ b/who.html
@@ -115,6 +115,15 @@ order: 2
       coordinate our open-source software efforts.
     </dd>
 
+    <dt><img src="/static/images/schutzman.png" 
+      alt="A photo of Zachary Schutzman"></dt>
+    <dd><strong><a href="https://zachschutzman.com/">Zachary Schutzman</a></strong> is a 
+    PhD student in Computer and Information Science at the University of Pennsylvania, working 
+    with Aaron Roth. Zach's work with MGGG includes algorithm design for various software projects 
+    and interactive introductions to the math of redistricting. More broadly, Zach works on topics at 
+    the interface of computing and social norms, such as fairness and privacy.
+    </dd>
+
     <dt><img src="/static/images/walch.jpg" alt="A photo of Olivia Walch"></dt>
     <dd><strong><a href="http://oliviawalch.com">Olivia Walch</a></strong> is a postdoc at the
       University of Michigan. Her research interests include mobile app development and the
