--- a/work.html
+++ b/work.html
@@ -3,12 +3,11 @@ layout: default
 title: Our Work
 ---
 
-{% assign surveys = site.works | where: "type", "survey" | sort: "date" |
-reverse %} {% assign reports = site.works | where: "type", "report" | sort:
-"date" | reverse %} {% assign code = site.works | where: "type", "code" | sort:
-"date" | reverse %} {% assign research = site.works | where: "type", "research"
-| sort: "date" | reverse %} {% assign data = site.works | where: "type", "data"
-| sort: "date" | reverse %}
+{% assign surveys = site.works | where: "type", "survey" | sort: "date" | reverse %}
+{% assign reports = site.works | where: "type", "report" | sort: "date" | reverse %}
+{% assign code = site.works | where: "type", "code" | sort: "date" | reverse %}
+{% assign research = site.works | where: "type", "research" | sort: "date" | reverse %}
+{% assign data = site.works | where: "type", "data" | sort: "date" | reverse %}
 <section>
   <article>
     <h1>Our Work</h1>
