--- a/index.html
+++ b/index.html
@@ -8,53 +8,54 @@ customlink: /#about-mggg
 ---
 
 <article class="featured-posts">
-  {% for post in site.categories["news"] %} {% include card.html work=post %} {%
-  endfor %}
+    {% for post in site.categories["news"] %} {% include card.html work=post %}
+    {% endfor %}
 </article>
 <article>
-  <h2>Our Mission</h2>
-  <p>
-    The <strong>Metric Geometry and Gerrymandering Group (MGGG)</strong> is a
-    Boston-based working group led by Moon Duchin of Tufts University and Justin
-    Solomon of MIT. Our mission is to study applications of geometry and
-    computing to U.S. redistricting. We believe that gerrymandering of all kinds
-    is a fundamental threat to our democracy.
-  </p>
-  <p>Our goals are these:</p>
-  <ul>
-    <li>
-      to pursue cutting-edge <strong>research</strong> in the basic science and
-      practically relevant applications of geometry, topology, and computing to
-      the redistricting problem;
-    </li>
-    <li>
-      to build open-source <strong>tools and resources</strong> that create
-      public access and analytical power for better understanding districts and
-      their consequences;
-    </li>
-    <li>
-      to partner with <strong>civil rights</strong> organizations to reexamine
-      and strengthen the quantitative toolkit for protecting voting rights;
-    </li>
-    <li>
-      to offer formal and informal expert <strong>consulting</strong> to
-      stakeholders on all sides.
-    </li>
-  </ul>
+    <h1>Our Mission</h1>
+    <p>
+        The <strong>Metric Geometry and Gerrymandering Group (MGGG)</strong> is
+        a Boston-based working group led by Moon Duchin of Tufts University and
+        Justin Solomon of MIT. Our mission is to study applications of geometry
+        and computing to U.S. redistricting. We believe that gerrymandering of
+        all kinds is a fundamental threat to our democracy.
+    </p>
+    <p>Our goals are these:</p>
+    <ul>
+        <li>
+            to pursue cutting-edge <strong>research</strong> in the basic
+            science and practically relevant applications of geometry, topology,
+            and computing to the redistricting problem;
+        </li>
+        <li>
+            to build open-source <strong>tools and resources</strong> that
+            create public access and analytical power for better understanding
+            districts and their consequences;
+        </li>
+        <li>
+            to partner with <strong>civil rights</strong> organizations to
+            reexamine and strengthen the quantitative toolkit for protecting
+            voting rights;
+        </li>
+        <li>
+            to offer formal and informal expert <strong>consulting</strong> to
+            stakeholders on all sides.
+        </li>
+    </ul>
 
-  <p class="support">
-    The Metric Geometry and Gerrymandering Group is a nonpartisan research
-    organization. MGGG has major support from the
-    <a href="https://tischcollege.tufts.edu/"
-      >Jonathan M. Tisch College of Civic Life</a
-    >
-    at Tufts University and the
-    <a href="https://bosefellows.mit.edu/"
-      >Amar G. Bose Research Grant Program</a
-    >
-    at MIT and an active partnership with the
-    <a href="https://lawyescommittee.org/"
-      >Lawyers' Committee for Civil Rights Under Law</a
-    >.
-  </p>
+    <p class="support">
+        The Metric Geometry and Gerrymandering Group is a nonpartisan research
+        organization. MGGG has major support from the
+        <a href="https://tischcollege.tufts.edu/"
+            >Jonathan M. Tisch College of Civic Life</a
+        >
+        at Tufts University and the
+        <a href="https://bosefellows.mit.edu/"
+            >Amar G. Bose Research Grant Program</a
+        >
+        at MIT and an active partnership with the
+        <a href="https://lawyescommittee.org/"
+            >Lawyers' Committee for Civil Rights Under Law</a
+        >.
+    </p>
 </article>
