--- a/who.html
+++ b/who.html
@@ -32,10 +32,7 @@ order: 2
     <h2>Local Team</h2>
     <dl class="bio-list">
         <dt>
-            <img
-                src="/static/images/angulu.jpg"
-                alt="A photo of Hakeem Angulu"
-            />
+            <img src="/uploads/angulu.jpg" alt="A photo of Hakeem Angulu" />
         </dt>
         <dd>
             <strong
@@ -51,7 +48,7 @@ order: 2
         </dd>
 
         <dt>
-            <img src="/static/images/buck.png" alt="A photo of Ruth Buck" />
+            <img src="/uploads/buck.png" alt="A photo of Ruth Buck" />
         </dt>
         <dd>
             <strong>Ruth Buck</strong> is a recent graduate of Macalester
@@ -62,7 +59,7 @@ order: 2
 
         <dt>
             <img
-                src="/static/images/deford2-square.jpg"
+                src="/uploads/deford2-square.jpg"
                 alt="A photo of Daryl DeFord"
             />
         </dt>
@@ -75,7 +72,7 @@ order: 2
         </dd>
 
         <dt>
-            <img src="/static/images/duchin.jpg" alt="A photo of Moon Duchin" />
+            <img src="/uploads/duchin.jpg" alt="A photo of Moon Duchin" />
         </dt>
         <dd>
             <strong
@@ -94,7 +91,7 @@ order: 2
         </dd>
 
         <dt>
-            <img src="/static/images/hully.png" alt="A photo of Max Hully" />
+            <img src="/uploads/hully.png" alt="A photo of Max Hully" />
         </dt>
         <dd>
             <strong>Max Hully</strong> is the software developer for MGGG,
@@ -106,7 +103,7 @@ order: 2
 
         <dt>
             <img
-                src="/static/images/kestigian.jpg"
+                src="/uploads/kestigian.jpg"
                 alt="A photo of Aidan Kestigian"
             />
         </dt>
@@ -124,10 +121,7 @@ order: 2
         </dd>
 
         <dt>
-            <img
-                src="/static/images/solomon.jpg"
-                alt="A photo of Justin Solomon"
-            />
+            <img src="/uploads/solomon.jpg" alt="A photo of Justin Solomon" />
         </dt>
         <dd>
             <strong
@@ -145,7 +139,7 @@ order: 2
         </dd>
 
         <dt>
-            <img src="/static/images/york.jpeg" alt="A photo of Oliver York" />
+            <img src="/uploads/york.jpeg" alt="A photo of Oliver York" />
         </dt>
         <dd>
             <strong>Oliver York</strong> is a junior at Harvard College studying
@@ -159,10 +153,7 @@ order: 2
     <h2>Key Collaborators, Past and Present</h2>
     <dl class="bio-list">
         <dt>
-            <img
-                src="/static/images/bernstein.jpg"
-                alt="A photo of Mira Bernstein"
-            />
+            <img src="/uploads/bernstein.jpg" alt="A photo of Mira Bernstein" />
         </dt>
         <dd>
             <strong>Mira Bernstein</strong> is an educator and data scientist
@@ -173,7 +164,7 @@ order: 2
             on voting systems in Santa Clara.
         </dd>
 
-        <dt><img src="/static/images/nieh.jpg" alt="A photo of Ari Nieh" /></dt>
+        <dt><img src="/uploads/nieh.jpg" alt="A photo of Ari Nieh" /></dt>
         <dd>
             <strong>Ari Nieh</strong> was a founding member of MGGG,
             specializing in mathematics pedagogy and communication. He developed
@@ -184,10 +175,7 @@ order: 2
         </dd>
 
         <dt>
-            <img
-                src="/static/images/sarahan.jpg"
-                alt="A photo of Michael Sarahan"
-            />
+            <img src="/uploads/sarahan.jpg" alt="A photo of Michael Sarahan" />
         </dt>
         <dd>
             <strong>Michael Sarahan</strong> is a software developer in Austin,
@@ -196,7 +184,7 @@ order: 2
 
         <dt>
             <img
-                src="/static/images/schutzman.png"
+                src="/uploads/schutzman.png"
                 alt="A photo of Zachary Schutzman"
             />
         </dt>
@@ -216,7 +204,7 @@ order: 2
         </dd>
 
         <dt>
-            <img src="/static/images/walch.jpg" alt="A photo of Olivia Walch" />
+            <img src="/uploads/walch.jpg" alt="A photo of Olivia Walch" />
         </dt>
         <dd>
             <strong><a href="http://oliviawalch.com">Olivia Walch</a></strong>
