--- a/work.html
+++ b/work.html
@@ -1,18 +1,15 @@
 ---
 title: Our Work
 layout: default
+show_categories: true
 ---
 
 {% assign surveys = site.works | where: "type", "survey" | sort: "date" |
-reverse %}
-{% assign reports = site.works | where: "type", "report" | concat: site.categories.reports | sort:
-"date" | reverse %}
-{% assign code = site.works | where: "type", "code" | sort:
-"date" | reverse %}
-{% assign research = site.works | where: "type", "research"
-| sort: "date" | reverse %}
-{% assign data = site.works | where: "type", "data"
-| sort: "date" | reverse %}
+reverse %} {% assign reports = site.works | where: "type", "report" | concat:
+site.categories.reports | sort: "date" | reverse %} {% assign code = site.works
+| where: "type", "code" | sort: "date" | reverse %} {% assign research =
+site.works | where: "type", "research" | sort: "date" | reverse %} {% assign
+data = site.works | where: "type", "data" | sort: "date" | reverse %}
 
 <h1>Our Work</h1>
 
